--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <a title="Alex Carvalho, CC BY-SA 2.0 &lt;https://creativecommons.org/licenses/by-sa/2.0&gt;, via Wikimedia Commons" 
+                href="https://commons.wikimedia.org/wiki/File:Chor%C3%A3o_-_Charlie_Brown_Jr..jpg">
+                <img width="512" alt="Chorão - Charlie Brown Jr." 
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Chor%C3%A3o_-_Charlie_Brown_Jr..jpg/512px-Chor%C3%A3o_-_Charlie_Brown_Jr..jpg?20130603173602" 
+                    class="nav-img" 
+                    loading="lazy"></a>
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
