--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
-                        height="278" loading="lazy">
+                    <img src="https://www.canva.com/design/DAGwbmTCsC4/2mrq-QBgL4mGUHXjwhJdDQ/edit?utm_content=DAGwbmTCsC4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton>
                     <a href="#chorão"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
