--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="https://www.canva.com/design/DAGwbmTCsC4/2mrq-QBgL4mGUHXjwhJdDQ/edit?utm_content=DAGwbmTCsC4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton>
-                    <a href="#chorão"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
+                    <img src="https://www.canva.com/design/DAGwbmTCsC4/2mrq-QBgL4mGUHXjwhJdDQ/edit?utm_content=DAGwbmTCsC4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
+                    <a href="#tropicalia" 
+                    class="btn btn-primary btn-lg botao-inicio fw-semibold"> Quero
                         conhecer!</a>
                 </div>
                 <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
