--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a title="Alex Carvalho, CC BY-SA 2.0 &lt;https://creativecommons.org/licenses/by-sa/2.0&gt;, via Wikimedia Commons" 
                 href="https://commons.wikimedia.org/wiki/File:Chor%C3%A3o_-_Charlie_Brown_Jr..jpg">
                 <img width="512" alt="Chorão - Charlie Brown Jr." 
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Chor%C3%A3o_-_Charlie_Brown_Jr..jpg/512px-Chor%C3%A3o_-_Charlie_Brown_Jr..jpg?20130603173602" 
+                    src="https://i.pinimg.com/736x/30/bb/c8/30bbc8eacbc4f7045461ac496cd79d6f.jpg" 
                     class="nav-img" 
                     loading="lazy"></a>
             <ul class="nav mt-5">
@@ -45,7 +45,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="https://www.canva.com/design/DAGwbmTCsC4/2mrq-QBgL4mGUHXjwhJdDQ/edit?utm_content=DAGwbmTCsC4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhV84ntcv6q5YDjJunArXwVptK2xcoolvXpIoeItlwopKDBXERSornOSAcYeKu1DK9Tj-qfGbBzCm_jJg6JrWK9PhH0DkeANNi-c5u65mXhFFXIKx6SgocN5n9H_qCSZdflrZX0vEeXMZA/s1600/chorao12.jpg">
                     <a href="#tropicalia" 
                     class="btn btn-primary btn-lg botao-inicio fw-semibold"> Quero
                         conhecer!</a>
